# ShiftNote-demo

./: .env.example  .gitignore  ARCHITECTURE.md  BACKLOG.md  CLAUDE.md  GMAIL_SETUP.md  README.md  RISKS.md  SPEC.MD  TECHNICAL_REPORT_DRAFT.md  WEEK8_REPORT.md  WEEK9_REPORT.md  generate_gmail_token.py  pyproject.toml  run_pipeline.py  streamlit_app.py
.github/workflows/: ci.yml
prototype/rag/: embed.py
shiftnotes_agent/nodes/: human_review.py  ingest_email.py  retrieve_and_generate.py  send_briefing.py
shiftnotes_agent/tools/: signal_classifier.py
