[project]
name = "shiftnotes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "google-api-python-client>=2.197.0",
    "google-auth>=2.55.0",
    "google-auth-httplib2>=0.4.0",
    "google-auth-oauthlib>=1.4.0",
    "groq>=1.4.0",
    "jsonpointer>=3.1.1",
    "langchain>=1.3.4",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.0",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.4",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.5.1",
    "streamlit>=1.58.0",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "transformers>=5.9.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
